=== 0.0.2 / 2009-06-28

* Initial release
